<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ciastek.todoapp.DetailsActivity"
    tools:showIn="@layout/activity_details">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/taskSummaryTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_summary">

        <EditText
            android:id="@+id/taskDetailsSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/taskDescriptionTextLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/task_description_height"
        android:hint="@string/task_description">

        <EditText
            android:id="@+id/taskDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_description_height"/>


    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/taskDetailsState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"/>

    <Spinner
        android:id="@+id/taskDetailsPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"/>

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_due_date"/>

    <TextView
        android:id="@+id/taskskDetailsDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:style="?attr/editTextStyle"/>
</LinearLayout>
