<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ciastek.todoapp.NewTaskActivity"
    tools:showIn="@layout/activity_new_task">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newTaskSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_summary"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/newTaskEditSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/newTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/newTaskEditDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/task_description_height"
            android:imeOptions="actionNext"
            android:inputType="none|textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/newTaskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"/>

    <TextView
        android:id="@+id/dueDateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_due_date"/>

    <TextView
        android:id="@+id/newTaskDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:style="?attr/editTextStyle"/>

</LinearLayout>
